--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,7 @@ spring.jpa.hibernate.ddl-auto= update
 
 # show queries on console
 spring.jpa.show-sql=true
+spring.main.allow-circular-references=true
+
 
 
